# sfm-learning

./: .envrc  .gitignore  ENVIRONMENT.md  LICENSE  README.md  app.py  environment.yml  pyproject.toml
blog/: 2026-03-17-sfm-learning-pipeline-deep-dive.md
data/images/: SOURCE.md
notebooks/: sfm_learning_walkthrough.ipynb
scripts/: run_demo.sh
src/sfm_learning/: __init__.py  ba.py  cli.py  export.py  features.py  geometry.py  io_utils.py  pipeline.py  types.py
tests/: test_features.py  test_geometry.py
