[build-system]
requires = ["hatchling>=1.26"]
build-backend = "hatchling.build"

[project]
name = "sfm-learning"
version = "0.1.0"
description = "Learning-first incremental Structure-from-Motion pipeline from images"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Joel + Loop" }]
dependencies = [
  "numpy>=1.26",
  "opencv-python>=4.10",
  "scipy>=1.12",
  "open3d>=0.18",
  "pillow>=10.0",
  "typer>=0.12",
  "rich>=13.7",
  "plotly>=5.22",
  "streamlit>=1.33",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.2",
  "pytest-cov>=5.0",
  "ruff>=0.6",
  "mypy>=1.10",
  "jupyter>=1.0",
]

[project.scripts]
sfm-learning = "sfm_learning.cli:app"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
